syntax = "proto3";

package converter;

option go_package = "/gen/converter";

service ConverterService {
    rpc ConvertToHLS (FileUploadRequest) returns (FileUploadResponse) {}
}

message FileUploadRequest {
    string file_name = 1;
    string content_type = 2;
    bytes file_data = 3;
}

message FileUploadResponse {
    bool success = 1;
    string message = 2;
}